fix: improve color contrast on footer and language button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -541,6 +541,9 @@ a {
     padding: 40px 1rem !important;
   }
 }
+.ka-footer h4, .ka-footer__version, .ka-footer__copyright {
+  color: #C93D1A !important;
+}
 .ka-footer__social {
   gap: 5px;
 }
@@ -557,13 +560,12 @@ a {
   font-size: 22px;
 }
 .ka-footer__version {
-  font-weight: 300 !important;
+  font-weight: 400 !important;
   margin: 10px 0;
   font-family: "Satoshi", sans-serif !important;
 }
 .ka-footer__copyright {
   font-size: 14px !important;
-  color: #FF5C35 !important;
 }
 
 .ka-moving {
@@ -757,6 +759,7 @@ a {
 }
 
 .ka-btn-language {
+  z-index: 5 !important;
   left: 1rem;
   bottom: 1rem;
   gap: 0.8rem;
@@ -764,7 +767,7 @@ a {
   padding: 0.8rem 1.2rem;
   border-radius: 1rem;
   border-color: #FF5C35 !important;
-  background-color: #FF5C35;
+  background-color: #C93D1A;
 }
 .ka-btn-language__flag img {
   width: 20px;
@@ -929,9 +932,6 @@ a {
   }
 }
 
-.ka-services {
-  z-index: 2;
-}
 @media (max-width: 576px) {
   .ka-services {
     padding-bottom: 1rem !important;
@@ -991,7 +991,6 @@ a {
 }
 
 .ka-projects {
-  z-index: 3;
   padding-top: 0px;
 }
 .ka-projects__col--offset-1 {
