--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -13,6 +13,7 @@ $color-background: #FFF5F0;
 $color-primary: #FFBFA3; 
 $color-secondary: #FF8955; 
 $color-accent: #FF5C35;
+$color-dark-accent: #C93D1A;
 
 // =========== RESPONSIVE ===========
 
